# ChessUI

./: README.md  index.html  issues.txt  package-lock.json  package.json  tsconfig.json
src/: App.svelte  Main.svelte  chess.ts  engine.ts  styles.css  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Cell.svelte  TitleBar.svelte
